0.10.1

- Fixed bug in capture plugin that caused it to record captured output
  on the test in the wrong attribute (#113).
- Fixed bug in result proxy that caused tests to fail if they accessed
  certain result attibutes directly (#114). Thanks to Neilen Marais
  for the bug report.
- Fixed bug in capture plugin that cause other error formatters
  changes to be lost if no output was captured (#124). Thanks to
  someone at ilorentz.org for the bug report.
- Fixed several bugs in the nosetests setup command that made some
  options unusable and the command itself unusable when no options
  were set (#125, #126, #128). Thanks to Alain Poirier for the bug
  reports.
- Fixed bug in handling of string errors (#130). Thanks to schl... at
  uni-oldenburg.de for the bug report.

0.10.0

- Fixed bug that broke plugins with names containing underscores or
  hyphens. Thanks to John J Lee for the bug report and patch (Issue
  #81).
- Fixed typo in nose.__all__. Thanks to John J Lee for the bug report.
- Fixed handling of test descriptions that are multiline
  docstrings. Thanks to James Casbon for the patch (Issue #50).
- Improved documentation of doctest plugin to make it clear that
  entities may have doctests, or themselves be tests, but not
  both. Thanks to John J Lee for the bug report and patch (Issue #84).
- Made __file__ available in non-python-module doctests.
- Fixed bug that made it impossible for plugins to exclude package
  directories from test discovery (Issue #89). Thanks to John J Lee
  for the bug report and patch.
- Fixed bug that swallowed TypeError and AttributeError exceptions
  raised in some plugin calls (Issue #95). Thanks to John J Lee for
  the bug report.
- Fixed inconsistencies in many interfaces and docs. Thanks to John J
  Lee for many bug reports.
- Fixed bugs in rpm generation (Issue #96). Thanks to Mike Verdone for
  the bug report and http://bugs.python.org/issue644744 for the fix.
- Fixed inconsisent use of os.environ in plugin testing